Improved friendships interface